Mejorar la funcionalidad de carga de archivos: se agregó validación, redimensionamiento de imágenes y mensajes de error en la vista

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -225,6 +225,10 @@ img:hover {
             border-radius: 5px;
             margin-top: 10px;
         }
+        p {
+            display: block;
+            color: red;
+        }
     }
 }
 
